name:                maia
version:             0.1.0.0
synopsis:            Type-level GraphQL-like API library
Description:         Type-level GraphQL-like API library
homepage:            https://github.com/MaiaOrg/haskell-maia
license:             MPL-2.0
license-file:        ../LICENSE
author:              Joseph Abrahamson
maintainer:          me@jspha.com
copyright:           2017 Joseph Abrahamson
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules: 
    Maia.Handler
    Maia.Internal.Lens
    Maia.Internal.Provided
    Maia.Language
    Maia.Language.Cardinality
    Maia.Language.Config
    Maia.Lookup
    Maia.Lookup.Builder
    Maia.Lookup.Error
    Maia.Record
    Maia.Request
    Maia.Response
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , singletons
  ghc-options:         -Wall -Werror
  default-language:    Haskell2010

test-suite maia-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:
  build-depends:       base
                     , maia
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/MaiaOrg/haskell-maia
